Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-4458

Windows installer does not launch upgrade wizard anymore

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.2, 5.5.30
    • 10.0.3, 5.5.31
    • None
    • None

    Description

      MSI does not ask anymore whether to install new service or upgrade existing one (if older version, or Oracle MySQL is installed and there is an existing service). MSI does not show checkbox that asks whether to start upgrade wizard after installation.

      Attachments

        Activity

          People

            wlad Vladislav Vaintroub
            wlad Vladislav Vaintroub
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1d
                1d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.